fix icon and text alignment

--- a/src/app/main/kanban/kanban.component.css
+++ b/src/app/main/kanban/kanban.component.css
@@ -41,8 +41,4 @@ nz-select {
 
 
 
-.aligned-with-icon{
-  position: absolute;
-  margin-top: 5px;
-  margin-left: 5px; /* optional */
-}
+
